Fix some package names in docs, etc.

--- a/base.cfg
+++ b/base.cfg
@@ -28,7 +28,7 @@ environment-vars =
 eggs =
     Plone
     Pillow
-    jazkarta.easyformplugin.jazshop [test]
+    jazkarta.easyformplugin.savecontent [test]
 
 [vscode]
 recipe = collective.recipe.vscode
@@ -45,7 +45,7 @@ recipe = zc.recipe.testrunner
 eggs = ${instance:eggs}
 initialization =
     os.environ['TZ'] = 'UTC'
-defaults = ['-s', 'jazkarta.easyformplugin.jazshop', '--auto-color', '--auto-progress']
+defaults = ['-s', 'jazkarta.easyformplugin.savecontent', '--auto-color', '--auto-progress']
 
 
 [coverage]
@@ -99,5 +99,5 @@ scripts =
    plone-compile-resources
 
 [versions]
-# Don't use a released version of jazkarta.easyformplugin.jazshop
-jazkarta.easyformplugin.jazshop =
+# Don't use a released version of jazkarta.easyformplugin.savecontent
+jazkarta.easyformplugin.savecontent =
